Use of Boolean.valueOf and fix missing generics type